harmonie de style + réglage des disfonctionnalités user-entrepot

--- a/FRONT/src/app/dashboard-main/dashboard-main.html
+++ b/FRONT/src/app/dashboard-main/dashboard-main.html
@@ -204,7 +204,7 @@
                   <input
                     type="text"
                     class="truck-input"
-                    placeholder="Ex : Entrepôt Paris Nord"
+                    placeholder="Ex : Entrepôt d'Abidjan"
                     [(ngModel)]="newWarehouse.name"
                   />
                 </div>
@@ -214,7 +214,7 @@
                   <input
                     type="text"
                     class="truck-input"
-                    placeholder="Ex : Gonesse, Île-de-France"
+                    placeholder="Ex : Abidjan, Côte d'Ivoire"
                     [(ngModel)]="newWarehouse.location"
                   />
                 </div>
